--- a/blocks/header/__image/header__image.css
+++ b/blocks/header/__image/header__image.css
@@ -8,7 +8,7 @@
 
 }
 
-@media screen and (min-width:320px){
+@media screen and (max-width:320px){
     .header__image{
         max-width:126px;
         margin: 0 0 0 27px;
