--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,8 @@
 @import url(./__line/header__line.css);
 
 .header{
-    margin: 45px auto 0;
-    min-width: 884px;
+    margin: 45px 200px 40px;
+    max-width: 884px;
 }
 
 
