--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -10,10 +10,23 @@
 .profile{
     margin: 40px auto;
     display: flex;
-    min-width: 884px;
+    max-width: 884px;
 }
 
-@media screen and (max-width:320px){
+@media screen and (max-width:900px){
+    .profile{
+        max-width:600px;
+    }
+}
+
+@media screen and (max-width:710px){
+    .profile{
+        max-width:400px;
+        margin:40px 10px;
+    }
+}
+
+@media screen and (max-width:575px){
     .profile{
         min-width:282px;
         flex-direction:column;
